# Rick-Workbench

./: .gitignore  CMakeLists.txt
glsl/: test.fragment.glsl  test.vertx.glsl
src/: main.cpp  test.cpp  test.h
src/game/: Game.cpp  Game.h
src/gl/: GLBuffer.cpp  GLBuffer.h  GLContext.cpp  GLContext.h  GLProgram.cpp  GLProgram.h  GLShader.cpp  GLShader.h  GLUnit.cpp  GLUnit.h
src/render/: Render.cpp  Render.h
src/utils/: file_utils.cpp  file_utils.hpp
test/: test.cpp
thirdPart/glad/: glad.cpp  glad.hpp
